--- a/css/style.scss
+++ b/css/style.scss
@@ -2,3 +2,21 @@
 
 @import url("https://fonts.googleapis.com/css?family=Roboto:regular,500,700,900&display=swap");
 
+.wrapper {
+    min-height: 100%;
+    overflow: hidden;
+}
+
+._ibg {
+    position: relative;
+
+    img {
+        object-fit: cover;
+        // object-position: top; 
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+    }
+}
