--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 /* reset  ------------------------------------------------------------ */
 /* &display=swap*/
 /*&subset=cyrillic-ext*/
-@import url("https://fonts.googleapis.com/css?family=Roboto:regular,500,700,900&display=swap");
 *,
 *::before,
 *::after {
@@ -48,12 +47,6 @@ html {
   font-size: 16px;
 }
 
-/* reset end ------------------------------------------------------------ */
-.wrapper {
-  min-height: 100%;
-  overflow: hidden;
-}
-
 ._ibg {
   position: relative;
 }
@@ -65,4 +58,36 @@ html {
   height: 100%;
   top: 0;
   left: 0;
+}
+
+/* reset end ------------------------------------------------------------ */
+body {
+  font-family: "Poppins";
+  font-weight: 300;
+  background-color: #0D0D11;
+  color: #9C9C9C;
+}
+
+.wrapper {
+  min-height: 100%;
+  overflow: clip;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+[class*=__container] {
+  max-width: 1310px;
+  margin: 0 auto;
+  padding: 0px 15px;
+}
+
+.page {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
 }
