--- a/css/_reset.scss
+++ b/css/_reset.scss
@@ -46,7 +46,20 @@ body {
 
 html {
     font-size: 16px;
-    // по умолчанию 
+}
+
+._ibg {
+    position: relative;
+
+    img {
+        object-fit: cover;
+        // object-position: top; 
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+    }
 }
 
 /* reset end ------------------------------------------------------------ */
