--- a/css/style.scss
+++ b/css/style.scss
@@ -1,22 +1,27 @@
 @import "_reset";
 
-@import url("https://fonts.googleapis.com/css?family=Roboto:regular,500,700,900&display=swap");
+body {
+    font-family: "Poppins";
+    font-weight: 300;
+    background-color: #0D0D11;
+    color: #9C9C9C;
+}
 
 .wrapper {
     min-height: 100%;
-    overflow: hidden;
+    overflow: clip;
+    display: flex;
+    flex-direction: column;
 }
 
-._ibg {
-    position: relative;
-
-    img {
-        object-fit: cover;
-        // object-position: top; 
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        top: 0;
-        left: 0;
-    }
+[class*="__container"] {
+    max-width: 1310px;
+    margin: 0 auto;
+    padding: 0px 15px;
 }
+
+.page {
+    flex: 1 1 auto;
+}
+
+// header ----------------------------
