--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,8 @@
           box-sizing: border-box;
 }
 
+ul,
+ol,
 li {
   list-style: none;
 }
@@ -18,6 +20,7 @@ li {
 a,
 a:visited {
   text-decoration: none;
+  color: inherit;
 }
 
 a:hover {
@@ -47,17 +50,16 @@ html {
   font-size: 16px;
 }
 
-._ibg {
-  position: relative;
+.button {
+  cursor: pointer;
+  background-color: inherit;
 }
-._ibg img {
-  -o-object-fit: cover;
-     object-fit: cover;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
+
+input {
+  font-weight: inherit;
+  font-size: inherit;
+  color: inherit;
+  font-family: inherit;
 }
 
 /* reset end ------------------------------------------------------------ */
@@ -87,6 +89,23 @@ body {
 }
 
 .page {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+}
+
+.header__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  min-height: 116px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.header__menu {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
