--- a/css/style.scss
+++ b/css/style.scss
@@ -24,4 +24,71 @@ body {
     flex: 1 1 auto;
 }
 
+// ----------------------------
+
+.button {}
+
 // header ----------------------------
+
+.header {
+
+    // .header__container
+
+    &__container {
+        display: flex;
+        min-height: 116px;
+        padding-top: 5px;
+        padding-bottom: 5px;
+        align-items: center;
+    }
+
+    // .header__logo
+
+    &__logo {}
+
+    // .header__menu
+
+    &__menu {
+        flex: 1 1 auto;
+    }
+
+    // .header__cart
+
+    &__cart {}
+
+    // .header__button
+
+    &__button {}
+}
+
+.menu {
+
+    // .menu__icon
+
+    &__icon {}
+
+    // .menu__list
+
+    &__list {}
+
+    // .menu__item
+
+    &__item {}
+
+    // .menu__link
+
+    &__link {}
+}
+
+.icon-menu {}
+
+.cart-header {
+
+    // .cart-header__text
+
+    &__text {}
+
+    // .cart-header__quantity
+
+    &__quantity {}
+}
