--- a/css/_reset.scss
+++ b/css/_reset.scss
@@ -21,7 +21,7 @@ li {
 a,
 a:visited {
     text-decoration: none;
-    color: inherit;
+    // color: inherit;
 }
 
 a:hover {
@@ -53,7 +53,7 @@ html {
 
 .button {
     cursor: pointer;
-    background-color: inherit;
+    color: inherit;
 }
 
 input {
