--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ html {
   font-size: 16px;
 }
 
-.button {
+button {
   cursor: pointer;
   color: inherit;
 }
@@ -99,7 +99,7 @@ body {
   padding: 16px 30px;
   background-color: #3D96F4;
   color: #fff;
-  height: 52px;
+  max-height: 52px;
   border-radius: 50px;
   letter-spacing: 2px;
   font-size: 14px;
@@ -112,6 +112,11 @@ body {
 }
 .button:hover {
   background-color: #65abf6;
+}
+@media (max-width: 991.98px) {
+  .button {
+    padding: 14px 20px;
+  }
 }
 
 .header__container {
@@ -128,21 +133,44 @@ body {
       -ms-flex-align: center;
           align-items: center;
 }
+@media (max-width: 991.98px) {
+  .header__container {
+    -webkit-column-gap: 25px;
+       -moz-column-gap: 25px;
+            column-gap: 25px;
+  }
+}
 .header__menu {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
 }
+.header__button {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 auto;
+          flex: 0 0 auto;
+}
+
 .menu__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  row-gap: 3px;
   -webkit-column-gap: 35px;
      -moz-column-gap: 35px;
           column-gap: 35px;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
+}
+@media (max-width: 991.98px) {
+  .menu__list {
+    -webkit-column-gap: 25px;
+       -moz-column-gap: 25px;
+            column-gap: 25px;
+  }
 }
 .menu__link {
   color: white;
@@ -193,4 +221,32 @@ body {
 
 .icon-menu {
   display: none;
+}
+@media (max-width: 991.98px) {
+  .icon-menu {
+    display: block;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 30px;
+            flex: 0 0 30px;
+    height: 18px;
+    position: relative;
+    z-index: 5;
+  }
+}
+.icon-menu span, .icon-menu::before, .icon-menu::after {
+  content: "";
+  right: 0;
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: #fff;
+}
+.icon-menu::before {
+  top: 0;
+}
+.icon-menu::after {
+  bottom: 0;
+}
+.icon-menu span {
+  top: calc(50% - 1px);
 }
