--- a/css/style.css
+++ b/css/style.css
@@ -135,22 +135,42 @@ body {
 }
 @media (max-width: 991.98px) {
   .header__container {
+    min-height: 90px;
     -webkit-column-gap: 25px;
        -moz-column-gap: 25px;
             column-gap: 25px;
   }
 }
-.header__menu {
+@media (max-width: 767.98px) {
+  .header__container {
+    min-height: 70px;
+  }
+}
+.header__container__logo {
+  position: relative;
+  z-index: 2;
+}
+.header__container__menu {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
 }
-.header__button {
+.header__container__button {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 auto;
           flex: 0 0 auto;
 }
 
+@media (max-width: 767.98px) {
+  .menu__body {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    left: 0;
+    top: 0;
+  }
+}
 .menu__list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -172,7 +192,23 @@ body {
             column-gap: 25px;
   }
 }
+@media (max-width: 767.98px) {
+  .menu__list {
+    row-gap: 10px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
 .menu__link {
+  display: block;
   color: white;
   font-size: 16px;
   line-height: 1.62;
@@ -180,6 +216,11 @@ body {
 }
 .menu__link:hover {
   text-decoration: underline;
+}
+@media (max-width: 767.98px) {
+  .menu__link {
+    font-size: 32px;
+  }
 }
 
 .cart-header {
@@ -222,7 +263,7 @@ body {
 .icon-menu {
   display: none;
 }
-@media (max-width: 991.98px) {
+@media (max-width: 767.98px) {
   .icon-menu {
     display: block;
     -webkit-box-flex: 0;
@@ -232,21 +273,21 @@ body {
     position: relative;
     z-index: 5;
   }
-}
-.icon-menu span, .icon-menu::before, .icon-menu::after {
-  content: "";
-  right: 0;
-  position: absolute;
-  width: 100%;
-  height: 2px;
-  background-color: #fff;
-}
-.icon-menu::before {
-  top: 0;
-}
-.icon-menu::after {
-  bottom: 0;
-}
-.icon-menu span {
-  top: calc(50% - 1px);
+  .icon-menu span, .icon-menu::before, .icon-menu::after {
+    content: "";
+    right: 0;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: #fff;
+  }
+  .icon-menu::before {
+    top: 0;
+  }
+  .icon-menu::after {
+    bottom: 0;
+  }
+  .icon-menu span {
+    top: calc(50% - 1px);
+  }
 }
