--- a/css/style.scss
+++ b/css/style.scss
@@ -65,32 +65,55 @@ body {
         align-items: center;
 
         @media (max-width: 991.98px) {
+            min-height: 90px;
             column-gap: 25px;
         }
-    }
 
-    // .header__logo
+        @media (max-width: 767.98px) {
+            min-height: 70px;
+        }
 
-    &__logo {}
+        // .header__logo
 
-    // .header__menu
+        &__logo {
+            position: relative;
+            z-index: 2;
+        }
 
-    &__menu {
-        flex: 1 1 auto;
-    }
+        // .header__menu
 
-    // .header__cart
+        &__menu {
+            flex: 1 1 auto;
+        }
 
-    &__cart {}
+        // .header__cart
 
-    // .header__button
+        &__cart {}
 
-    &__button {
-        flex: 0 0 auto;
+        // .header__button
+
+        &__button {
+            flex: 0 0 auto;
+        }
     }
 }
 
 .menu {
+
+    // .menu__body
+
+    &__body {
+
+        @media (max-width: 767.98px) {
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            background-color: black;
+            left: 0;
+            top: 0;
+        }
+
+    }
 
     // .menu__list
 
@@ -104,6 +127,13 @@ body {
         @media (max-width: 991.98px) {
             column-gap: 25px;
         }
+
+        @media (max-width: 767.98px) {
+            row-gap: 10px;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
     }
 
     // .menu__item
@@ -113,6 +143,7 @@ body {
     // .menu__link
 
     &__link {
+        display: block;
         color: white;
         font-size: 16px;
         line-height: 1.62;
@@ -120,6 +151,10 @@ body {
 
         &:hover {
             text-decoration: underline;
+        }
+
+        @media (max-width: 767.98px) {
+            font-size: 32px;
         }
 
     }
@@ -162,34 +197,34 @@ body {
 .icon-menu {
     display: none;
 
-    @media (max-width: 991.98px) {
+    @media (max-width: 767.98px) {
         display: block;
         flex: 0 0 30px;
         height: 18px;
         position: relative;
         z-index: 5;
-    }
 
-    span,
-    &::before,
-    &::after {
-        content: '';
-        right: 0;
-        position: absolute;
-        width: 100%;
-        height: 2px;
-        background-color: #fff;
-    }
+        span,
+        &::before,
+        &::after {
+            content: '';
+            right: 0;
+            position: absolute;
+            width: 100%;
+            height: 2px;
+            background-color: #fff;
+        }
 
-    &::before {
-        top: 0;
-    }
+        &::before {
+            top: 0;
+        }
 
-    &::after {
-        bottom: 0;
-    }
+        &::after {
+            bottom: 0;
+        }
 
-    span {
-        top: calc(50% - 1px);
+        span {
+            top: calc(50% - 1px);
+        }
     }
 }
